Bug #53665: replace material-grid() with spacing()

--- a/management/univention-web/css/Toolbar.styl
+++ b/management/univention-web/css/Toolbar.styl
@@ -25,19 +25,19 @@
 	background-color: #fff
 
 .umc .dijitToolbar label
-	padding: 0 material-grid(1)
+	padding: 0 spacing(1)
 
 .umc .dijitToolbar
 	& .dijitButton
 	& .dijitDropDownButton
 		material-flat-button()
 		umc-icon-button(26px)
-		margin: material-grid(1, true)
+		margin: spacing(1, true)
 
 	& .dijitToggleButton
 		material-outlined-button()
 		umc-icon-button(26px)
-		margin: material-grid(1, true)
+		margin: spacing(1, true)
 
 /* toggle button checked status */
 .umc .dijitToolbarSeparator
