--- a/management/univention-web/css/site/layout.styl
+++ b/management/univention-web/css/site/layout.styl
@@ -90,10 +90,10 @@ flex-page()
 			flex-direction: column
 
 		.umcPageNav
-			margin-bottom: material-grid(2)
+			margin-bottom: spacing(2)
 			flex: 0 0 auto
 		&.umcPage--fullWidth .umcPageNav
-			margin-bottom: material-grid(1)
+			margin-bottom: spacing(1)
 
 		.umcPageNavContent
 			min-height: 0%
@@ -104,7 +104,7 @@ flex-page()
 		.umcPageMain
 			display: flex
 			flex-direction: column
-			margin-bottom: material-grid(2)
+			margin-bottom: spacing(2)
 
 		.umcPageMainContent
 			min-height: 0%
