--- a/management/univention-web/css/widgets/Calendar.styl
+++ b/management/univention-web/css/widgets/Calendar.styl
@@ -148,7 +148,7 @@
 
 	/* Styling for year container */
 	.dijitCalendarYearContainer
-		padding-top: material-grid(1)
+		padding-top: spacing(1)
 
 		.dijitCalendarYearLabel
 			display: flex
